<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="ac">Ac</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="equal">=</string>
    <string name="head">Calculator</string>
    <string name="bs">BS</string>
    <string name="mod">%</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
</resources>